[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/themes/health_bar.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/EvilEmpire-4BBVK.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://rsc/scripts/hud.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Lato-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=7]
size = 30
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 3
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 1, 0.0784314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.109804, 0.109804, 0.109804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.184314, 0.596078, 0.105882, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.780392, 0.780392, 0.780392, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=4]
size = 35
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.54902, 0.54902, 0.54902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
shadow_color = Color( 1, 0.898039, 0.898039, 0.74902 )
shadow_size = 5
shadow_offset = Vector2( 1, 1 )

[node name="hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_box_container" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 57.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fuel_bar" type="ProgressBar" parent="h_box_container"]
margin_left = 42.0
margin_right = 268.0
margin_bottom = 47.0
rect_min_size = Vector2( 226, 40 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 6 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="h_box_container"]
margin_left = 298.0
margin_top = 1.0
margin_right = 358.0
margin_bottom = 46.0
rect_min_size = Vector2( 60, 45 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 8 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_timer" type="Timer" parent="."]
autostart = true

[node name="decrease_lives_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="update_tween" type="Tween" parent="."]

[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="decrease_lives_timer" to="." method="_on_decrease_lives_timer_timeout"]
